--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header><i class="fa-solid fa-arrow-left"></i> Weather App</header>
       <section class="input-part">
-        <p class="info-text">Please enter a valid city name</p>
+        <p class="info-text"></p>
         <input
           type="text"
           placeholder="Enter city name"
@@ -29,24 +29,24 @@
         <button>Get Device Location</button>
       </section>
       <section class="weather-part">
-        <img src="./icons/cloud.svg" alt="Weather Icon" />
+        <img src="#" alt="Weather Icon" />
         <div class="temp-wrapper">
           <div class="temp">
-            <span class="numb">27</span>
+            <span class="numb">_</span>
             <span class="deg">°</span>C
           </div>
         </div>
-        <div class="weather">Cloud</div>
+        <div class="weather">_ _</div>
         <div class="location">
           <i class="fa-solid fa-location-dot"></i>
-          <span>DaLat , LamDong</span>
+          <span>_, _</span>
         </div>
         <div class="bottom-details">
           <div class="column feels">
             <i class="fa-solid fa-thermometer-half"></i>
             <div class="details">
               <div class="temp">
-                <span class="numb-2">27</span>
+                <span class="numb-2">_</span>
                 <span class="deg">°</span>C
               </div>
               <p>Feels like</p>
@@ -56,7 +56,7 @@
             <i class="fa-solid fa-droplet"></i>
             <div class="details">
               <div class="temp">
-                <span>84%</span>
+                <span>_</span>
               </div>
               <p>Humidity</p>
             </div>
